...
            .foregroundColor(.white)
            .font(.brand)
            .searchable(
                text: $searchText,
                isPresented: $isSearching,
                placement: .navigationBarDrawer(displayMode: .always),
                prompt: "Enter exercise"
            )
            .onSubmit(of: .search) {
                dismissSearch()
                showingAddExerciseDetailsView = true
            }
            .accessibilityIdentifier("Exercise List")
            .navigationTitle("Add new exercise")
            .toolbar {
                ToolbarItem {
                    Button("Close") {
                        self.showingAddExerciseView = false
                    }
...
