...
                                Text(suggestion.name)
                            }
                            .listRowBackground(Colours.backgroundSecondary)
                        }
                    }
                }
                .accessibilityIdentifier("Food List")
                MealItemsView(viewModel: mealItemsViewModel)
                Spacer()
            }
            .navigationTitle("Add new food")
            .toolbar {
                ToolbarItem {
                    Button("Close") {
                        self.showingAddEntryView = false
                    }
                }
...
